--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# IDE
+.vscode
+.vscode/*
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -60,6 +64,7 @@ coverage.xml
 local_settings.py
 db.sqlite3
 db.sqlite3-journal
+**/migrations
 
 # Flask stuff:
 instance/
